added csv2daa target

--- a/src/danti-connect/gdl90/Makefile
+++ b/src/danti-connect/gdl90/Makefile
@@ -1,2 +1,9 @@
 all:
-	gcc *.c
+	make udp
+	make basic
+
+udp:
+	gcc gdl90*.c main-udp.c -o gdl90-udp
+
+basic:
+	gcc gdl90*.c main-basic.c -o gdl90-basic
