--- a/src/danti-connect/gdl90/Makefile
+++ b/src/danti-connect/gdl90/Makefile
@@ -1,40 +1,34 @@
-SOFTRF_VERSION=3bce09e27ed815460a3640aa415f862a3f5b07fa
+SOFTRF_VERSION=1.5.1
 
 all: clone-gdl90-library
 	make udp
 	make test
 
 clone-gdl90-library:
-	@if ! test -f "gdl90.c";\
-	then make clone-softrf;\
-	fi
+	test -f "SoftRF-rotobox/gdl90.c" || make clone-softrf
 
 clone-softrf:
-	-mkdir tmp
-	-cd tmp && git clone https://github.com/lyusupov/SoftRF.git softrf
-	cd tmp/softrf && git checkout $(SOFTRF_VERSION)
-	cp tmp/softrf/software/firmware/source/libraries/rotobox/*.* .
-	-rm -rf tmp
+	test -d softrf || git clone https://github.com/lyusupov/SoftRF.git softrf
+	cd softrf && git checkout $(SOFTRF_VERSION)
+	rsync -avz softrf/software/firmware/source/libraries/rotobox/ SoftRF-rotobox/ && rsync softrf/LICENSE SoftRF-rotobox/SoftRF-LICENSE.txt
+	-rm -rf softrf
 
 udp:
-	gcc -D RASPBERRY_PI gdl90*.c main-udp.c -o gdl90-udp
+	gcc -D RASPBERRY_PI -ISoftRF-rotobox SoftRF-rotobox/*.c gdl90_ext.c main-udp.c -o gdl90-udp
 
 test:
-	gcc -D RASPBERRY_PI gdl90*.c main-test.c -o gdl90-test
+	gcc -D RASPBERRY_PI -ISoftRF-rotobox SoftRF-rotobox/*.c gdl90_ext.c main-test.c -o gdl90-test
 
 file=""
 xxd:
 	xxd $(file)
 
 clean: clean-src
-	-rm gdl90-udp
-	-rm gdl90-test
+	-rm gdl90-udp gdl90-test
 
 clean-src:
-	-rm gdl90.*
-	-rm portable_endian.h
-	-rm -rf tmp
-	-rm README.md
+	-rm -f SoftRF-rotobox/?*.*
+	-rm -rf softrf
 
 .PHONY:
 	udp test
