--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"watch": "tsc -b -w",
 		"start": "cd dist && electron ./main.js",
 		"danti": "cd dist && electron ./main.js",
-		"connect-testbed2danti": "node dist/danti-connect/connect-testbed2danti.js",
-		"testbed": "cd dist && node danti-connect/connect-testbed2danti.js",
+		"connect-socket": "node dist/danti-connect/connect-socket.js",
+		"socket": "cd dist && node danti-connect/connect-socket.js",
 		"connect-xplane2danti": "node dist/danti-connect/connect-xplane2danti.js",
 		"connect-xplane2danti-replay": "node dist/danti-connect/connect-xplane2danti.js -replay",
 		"xplane": "node dist/danti-connect/connect-xplane2danti.js",
