updated npm scripts

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 		"watch": "tsc -b -w",
 		"start": "cd dist && electron ./main.js",
 		"danti": "cd dist && electron ./main.js",
+		"danti-gdl90": "npm start & npm run connect-gdl90",
+		"connect-gdl90": "node dist/danti-connect/connect-gdl90.js",
+		"gdl90-source": "node dist/danti-connect/gdl90-source.js",	
 		"connect-socket": "node dist/danti-connect/connect-socket.js",
 		"socket": "cd dist && node danti-connect/connect-socket.js",
 		"connect-xplane2danti": "node dist/danti-connect/connect-xplane2danti.js",
